# pakem

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: autobot.yml  check-title.yml  check.yml  ci.yml  dependabot-auto.yml  enforce-label.yml  publish.yml  welcome.yml
pakem/: __init__.py  __main__.py  core.py
tests/: pakem_test.py  test_pakem.py
