[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pakem"
version = "1.0.0"
description = "A repository packer that generates XML representations of codebases"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Yaron Koresh"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
keywords = ["repository", "packer", "xml", "codebase"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "poethepoet",
    "pre-commit",
    "build"
]

[project.scripts]
pakem = "pakem.core:main"

[project.urls]
Homepage = "https://github.com/YaronKoresh/pakem"
Repository = "https://github.com/YaronKoresh/pakem"
Issues = "https://github.com/YaronKoresh/pakem/issues"

[tool.setuptools.packages.find]
include = ["pakem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# E/W (Standard), F (Pyflakes), I (Import Sorting), B (Bugbear/Best Practices), UP (Upgrade Syntax)
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
# Quality Assurance
lint = "ruff check . --fix"
format = "ruff format ."
test = "pytest tests/"
check = ["format", "lint", "test"]

# Build Pipeline
build = { cmd = "python -m build" }

# Setup Task
hook = { cmd = "pre-commit install" }