[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pakem"
version = "1.0.0"
description = "A repository packer that generates XML representations of codebases"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Yaron Koresh"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
keywords = ["repository", "packer", "xml", "codebase"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "poethepoet",
    "pre-commit",
    "build"
]

[project.scripts]
pakem = "pakem.core:main"

[project.urls]
Homepage = "https://github.com/YaronKoresh/pakem"
Repository = "https://github.com/YaronKoresh/pakem"
Issues = "https://github.com/YaronKoresh/pakem/issues"

[tool.setuptools.packages.find]
include = ["pakem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# --- RUFF CONFIGURATION ---
[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

ignore = [
    "E501",
    "E402",
    "F401"
]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
# Quality Assurance
test = "pytest tests/"
compile = { cmd = "python -m compileall -q ." }
pre-commit = { cmd = "pre-commit run --all-files", env = { SKIP = "no-commit-to-branch" } }
clean = { cmd = '''python -Bc "
import pathlib, shutil;
targets = {
        'directories': {
            '__pycache__', '.pytest_cache', '.ruff_cache', '.mypy_cache',
            '.tox', '.nox', '.cache', '.ipynb_checkpoints', 'htmlcov',
            'build', 'dist', '.eggs', '*.egg-info', '.coverage.reports'
        },
        'files': {
            '.coverage', '.coverage.*', '.sqlite', 'nosetests.xml',
            'coverage.xml', '*.pyc', '*.pyo', '*.pyd', '.DS_Store'
        }
};
for p in pathlib.Path('.').rglob('*'):
        if p.name in targets['directories'] or any(p.match(pat) for pat in targets['directories']):
            if p.is_dir(): shutil.rmtree(p, ignore_errors=True)
        elif p.name in targets['files'] or any(p.match(pat) for pat in targets['files']):
            if p.is_file(): p.unlink(missing_ok=True)
"''' }
strip-comments = { cmd = '''python -c "
import tokenize
import io
import pathlib

def strip_comments_and_format(file_path):
    try:
        with open(file_path, 'r', encoding='utf-8', newline='') as f:
            source = f.read()

        tokens = tokenize.generate_tokens(io.StringIO(source).readline)
        result = []
        last_lineno = -1
        last_col = 0

        for toktype, tokval, start, end, line in tokens:
            if toktype == tokenize.COMMENT:
                continue

            if toktype == tokenize.NL or toktype == tokenize.NEWLINE:
                pass

            result.append((toktype, tokval, start, end, line))
        cleaned = tokenize.untokenize(result)

        with open(file_path, 'w', encoding='utf-8', newline='') as f:
            f.write(cleaned)

        print(f'Stripped and cleaned: {file_path}')

    except Exception as e:
        print(f'Failed to process {file_path}: {e}')

for p in pathlib.Path('.').rglob('*.py'):
    strip_comments_and_format(p)
"''' }
check = ["clean", "compile", "strip-comments", "pre-commit", "test", "clean"]

# Build Pipeline
build = { cmd = "python -m build" }

# Setup Task
hook = { cmd = "pre-commit install" }
